--- a/PgSql/PgSql.csproj
+++ b/PgSql/PgSql.csproj
@@ -12,14 +12,14 @@
     <Company>-</Company>
     <RepositoryUrl>https://github.com/windischb/PgSql</RepositoryUrl>
     <PackageProjectUrl>https://github.com/windischb/PgSql</PackageProjectUrl>
-    <Version>2.0.3</Version>
+    <Version>1.1.1</Version>
   </PropertyGroup>
 
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2">
     </PackageReference>
-    <PackageReference Include="Npgsql" Version="4.0.0">
+    <PackageReference Include="Npgsql" Version="[3.2.5]">
     </PackageReference>
     <PackageReference Include="System.Reactive.Linq" Version="4.0.0">
     </PackageReference>
