--- a/PgSql/PgSql.csproj
+++ b/PgSql/PgSql.csproj
@@ -12,15 +12,16 @@
     <Company>-</Company>
     <RepositoryUrl>https://github.com/windischb/PgSql</RepositoryUrl>
     <PackageProjectUrl>https://github.com/windischb/PgSql</PackageProjectUrl>
-    <Version>2.1.4</Version>
+    <Version>3.0.0-alpha009</Version>
   </PropertyGroup>
 
 
   <ItemGroup>
-    <PackageReference Include="LibLog" Version="5.0.0" />
+    <PackageReference Include="doob.Reflectensions" Version="1.5.2" />
+    <PackageReference Include="LibLog" Version="5.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2">
     </PackageReference>
-    <PackageReference Include="Npgsql" Version="[3.2.5]">
+    <PackageReference Include="Npgsql" Version="4.0.2">
     </PackageReference>
     <PackageReference Include="Remotion.Linq" Version="2.2.0" />
     <PackageReference Include="System.Reactive.Linq" Version="4.0.0">
