--- a/PgSql/PgSql.csproj
+++ b/PgSql/PgSql.csproj
@@ -12,20 +12,24 @@
     <Company>-</Company>
     <RepositoryUrl>https://github.com/windischb/PgSql</RepositoryUrl>
     <PackageProjectUrl>https://github.com/windischb/PgSql</PackageProjectUrl>
-    <Version>3.0.0-alpha032</Version>
+    <Version>3.0.25</Version>
   </PropertyGroup>
 
 
   <ItemGroup>
-    <PackageReference Include="LibLog" Version="5.0.2" />
+    <PackageReference Include="LibLog" Version="5.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2">
     </PackageReference>
-    <PackageReference Include="Npgsql" Version="4.0.2">
+    <PackageReference Include="Npgsql" Version="4.0.4">
     </PackageReference>
-    <PackageReference Include="Reflectensions.Json" Version="1.0.1" />
+    <PackageReference Include="Reflectensions.Json" Version="2.2.3" />
     <PackageReference Include="Remotion.Linq" Version="2.2.0" />
-    <PackageReference Include="System.Reactive.Linq" Version="4.0.0">
+    <PackageReference Include="System.Reactive.Linq" Version="4.1.0">
     </PackageReference>
   </ItemGroup>
+
 
 </Project>
